[gd_scene load_steps=6 format=3 uid="uid://dtywn5kvoatqq"]

[ext_resource type="Script" path="res://scripts/room_lobby.gd" id="1_i610i"]
[ext_resource type="Texture2D" uid="uid://1433wc4llul3" path="res://sky_boxes/space_skybox_01.png" id="1_il61s"]
[ext_resource type="Texture2D" uid="uid://cvjq1e61egvjn" path="res://sky_boxes/space_skybox_02.png" id="2_sinly"]
[ext_resource type="Texture2D" uid="uid://bvkwlvy86lm8h" path="res://sky_boxes/space_skybox_03.png" id="3_50ghy"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_8ck2g"]
frames = 3
frame_0/texture = ExtResource("1_il61s")
frame_1/texture = ExtResource("2_sinly")
frame_1/duration = 1.0
frame_2/texture = ExtResource("3_50ghy")
frame_2/duration = 1.0

[node name="RoomLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i610i")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_il61s")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1568.0
offset_top = -664.0
offset_right = 1568.0
offset_bottom = 664.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AnimatedTexture_8ck2g")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="RoomLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 40
text = "Room 0 Lobby"
horizontal_alignment = 1

[node name="PlayersLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Players"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayersVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 30
text = "Start game"

[node name="ExitRoomButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 30
text = "Exit room"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitRoomButton" to="." method="_on_exit_room_button_pressed"]
